--- a/src/app/features/product/components/product-list/product-list.component.html
+++ b/src/app/features/product/components/product-list/product-list.component.html
@@ -1,1 +1,10 @@
-<p>product-list works!</p>
+<section class="my-5">
+    <div class="container mx-auto">
+        <h2 class=" text-4xl font-bold uppercase text-center">Popular Products</h2>
+        <div class="grid sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-5">
+            @for (product of allProducts; track product._id) {
+            <app-product-card [product]="product"/>
+            }
+        </div>
+    </div>
+</section>
