--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300&display=swap');
 @import "tailwindcss";
 @source "../node_modules/flowbite";
+
+
+@theme {
+    --color-main: #0aad0a;
+    --color-light: #f0f3f2;
+    --shadow-main: rgba(145, 158, 171, .2) 0px 2px 4px -1px, rgba(145, 158, 171, .14) 0px 4px 5px 0px, rgba(145, 158, 171, .12) 0px 1px 10px 0px;
+    --font-main: 'Encode Sans Expanded', sans-serif;
+    --color-rating: #ffc908;
+}
+
+
+body {
+    font-family: var(--font-family) !important;
+}
+
+.product .btn {
+    transition: transform 1s, opacity 1s;
+    transform: translateY(100%);
+    opacity: 0;
+}
+
+.product:hover .btn {
+    opacity: 1;
+    transform: translateY(0%);
+
+}
