--- a/src/app/features/home/components/main-slider/main-slider.component.html
+++ b/src/app/features/home/components/main-slider/main-slider.component.html
@@ -1,1 +1,12 @@
-<p>main-slider works!</p>
+<owl-carousel-o [options]="customOptions">
+    <ng-template carouselSlide>
+        <img src="images/SLIDER N 1.avif" alt="">
+    </ng-template>
+    <ng-template carouselSlide>
+        <img src="images/SLIDER N 2.avif" alt="">
+    </ng-template>
+    <ng-template carouselSlide>
+        <img src="images/SLIDER N 3.avif" alt="">
+    </ng-template>
+
+</owl-carousel-o>
