--- a/src/app/features/product/components/product-card/product-card.component.html
+++ b/src/app/features/product/components/product-card/product-card.component.html
@@ -1,9 +1,14 @@
-<div>
-    <img [src]="product.imageCover" class="w-full" [alt]="product.title">
-    <h5 class="text-main">{{product.category.name}}</h5>
-    <h4 class="font-bold line-clamp-1">{{product.title}}</h4>
-    <div class="flex justify-between my-5">
-        <span>{{product.price}} EGP</span>
-        <span> <i class="fa-solid fa-star text-rating"></i> {{product.ratingsAverage}}</span>
+<div class="hover:border-main hover:border p-3 rounded-2xl hover:shadow-main cursor-pointer group shadow-md">
+    <div [routerLink]="['/product-detalis', product._id]">
+        <img [src]="product.imageCover" class="w-full" [alt]="product.title">
+        <h5 class="text-main">{{product.category.name}}</h5>
+        <h4 class="font-bold line-clamp-1">{{product.title}}</h4>
+        <div class="flex justify-between my-5">
+            <span>{{product.price}} EGP</span>
+            <span> <i class="fa-solid fa-star text-rating"></i> {{product.ratingsAverage}}</span>
+        </div>
     </div>
-</div> 
+
+    <button class=main-btn>Add To Cart</button>
+
+</div>
