--- a/src/app/features/product/components/product-detalis/product-detalis.component.html
+++ b/src/app/features/product/components/product-detalis/product-detalis.component.html
@@ -1,1 +1,22 @@
-<p>product-detalis works!</p>
+<section class="my-5">
+    <div class="containr mx-auto">
+        <div class="grid sm:grid-cols-12 max-w-screen-xl mx-auto ">
+
+            <div class="sm:col-span-4">
+                <img [src]="productDetails.imageCover" class="w-100 mx-auto" alt="product">
+            </div>
+            <div class="sm:col-span-8 my-5">
+                <h1 class="text-4xl font-bold">{{productDetails.title}}</h1>
+                <p class="my-5">{{productDetails.description}}</p>
+
+                <div class="flex justify-between mt-5">
+                    <span>{{productDetails.price}} EGP</span>
+                    <span> <i class="fa-solid fa-star text-rating"></i> {{productDetails.ratingsAverage}}</span>
+                </div>
+
+
+                <button class="main-btn opacity-100">Add To Cart</button>
+            </div>
+        </div>
+    </div>
+</section>
