--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,18 @@
     .main-btn {
         @apply bg-main translate-y-full opacity-0 text-white px-5 py-2 rounded-xl w-full hover:bg-main/70 cursor-pointer transition duration-700 group-hover:translate-y-0 group-hover:opacity-100;
     }
+
+    .main-input {
+        @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
+    }
+
+    .main-label {
+        @apply block mb-2 text-sm font-medium text-gray-900 dark:text-white
+    }
+
+    .main-h2 {
+        @apply text-4xl font-bold uppercase text-center my-5 bg-main text-white py-4
+    }
 }
 
 body {
