--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -54,7 +54,8 @@
             <ul
                 class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-200 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                 <li>
-                    <a class=" cursor-pointer block py-2 px-3 md:p-0 rounded-sm md:hover:text-main dark:text-white md:dark:hover:text-main  dark:hover:bg-gray-700 md:dark:hover:bg-transparent "
+                    <a (click)="logOut()"
+                        class=" cursor-pointer block py-2 px-3 md:p-0 rounded-sm md:hover:text-main dark:text-white md:dark:hover:text-main  dark:hover:bg-gray-700 md:dark:hover:bg-transparent "
                         aria-current="page">LogOut</a>
                 </li>
             </ul>
