feat(core): Add cart functionality, Stripe order handling & global interceptors

--- a/src/app/features/product/components/product-card/product-card.component.html
+++ b/src/app/features/product/components/product-card/product-card.component.html
@@ -9,6 +9,6 @@
         </div>
     </div>
 
-    <button class=main-btn>Add To Cart</button>
+    <button (click)="onAddToCart()" class=main-btn>Add To Cart</button>
 
 </div>
