--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
 <router-outlet></router-outlet>
+
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#0aad0a" type = "ball-climbing-dot" [fullScreen] = "true"></ngx-spinner>
