--- a/src/app/features/product/components/product-list/product-list.component.html
+++ b/src/app/features/product/components/product-list/product-list.component.html
@@ -3,7 +3,7 @@
         <h2 class=" main-h2">Popular Products</h2>
         <div class="grid sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-5 max-w-screen-xl mx-auto">
             @for (product of allProducts; track product._id) {
-            <app-product-card [product]="product" />
+            <app-product-card [product]="product" (addToCart)="addProductToCart($event)" />
             }@empty {
             <h2 class="text-main text-5xl col-span-12 text-center my-6 uppercase font-bold">Loading
                 <i class="fa-solid fa-spinner"></i>
