feat(auth): Implement forgot password logic and UI

--- a/src/app/core/auth/components/login/login.component.html
+++ b/src/app/core/auth/components/login/login.component.html
@@ -12,7 +12,7 @@
                         "border-red-500":emailControl,
                         "text-red-500":emailControl,
 
-                }' type="email" formControlName="email" class="main-input mb-5" placeholder="Enter Your E-mail:" />
+                }' type="email" formControlName="email" class="main-input mb-5" placeholder="Enter Your Email:" />
                 <validation-messages [controls]="authForm.get('email')" />
             </div>
 
@@ -47,6 +47,9 @@
                     }
 
                 </button>
+            </div>
+            <div class="flex justify-center align-middle cursor-pointer text-main">
+                <a routerLink="/forgotpassword">ForgotPassword?</a>
             </div>
 
             @if (resMsg) {
