feat(ui, routing): add categories, brands, footer, slider & NotFound component with full UI & logic

--- a/src/app/core/auth/components/login/login.component.html
+++ b/src/app/core/auth/components/login/login.component.html
@@ -10,9 +10,8 @@
                         "bg-red-50":emailControl,
                         "border":emailControl,
                         "border-red-500":emailControl,
-                        "text-red-500":emailControl,
-
-                }' type="email" formControlName="email" class="main-input mb-5" placeholder="Enter Your Email:" />
+                        "text-red-500":emailControl }' type="email" formControlName="email" class="main-input mb-5"
+                    placeholder="Enter Your Email:" />
                 <validation-messages [controls]="authForm.get('email')" />
             </div>
 
