--- a/src/app/core/auth/components/not-found/not-found.component.html
+++ b/src/app/core/auth/components/not-found/not-found.component.html
@@ -1,1 +1,14 @@
-<p>not-found works!</p>
+<section class="h-dvh">
+    <div class="max-w-screen-xl mx-auto">
+        <div class="row">
+            <div class="col-span-12 text-center mt-15">
+                <img src="/images/error.svg" class="mx-auto" alt="Error404-Picture">
+                <h2 class="font-bold mt-3 capitalize">
+                    Well, This is Awkward...🤔 <br> Looks like this page packed its bags and left. Let’s get you back
+                    home!
+                </h2>
+                <button routerLink="/home" class="w-md opacity-100 main-btn capitalize">take me home </button>
+            </div>
+        </div>
+    </div>
+</section>
