--- a/src/app/features/home/components/category-slider/category-slider.component.html
+++ b/src/app/features/home/components/category-slider/category-slider.component.html
@@ -1,1 +1,13 @@
-<p>category-slider works!</p>
+<h2 class=" main-h2">Popular Categories</h2>
+<div class="container mx-auto">
+    <owl-carousel-o [options]="customOptions">
+        @for (category of allCategories; track category._id) {
+        <ng-template carouselSlide>
+            <div>
+                <img class="w-full h-63" [src]="category.image">
+                <h5 class="text-main font-bold text-center">{{category.name}}</h5>
+            </div>
+        </ng-template>
+        }
+    </owl-carousel-o>
+</div>
