--- a/src/app/features/brands/components/brand-card/brand-card.component.html
+++ b/src/app/features/brands/components/brand-card/brand-card.component.html
@@ -1,1 +1,6 @@
-<p>brand-card works!</p>
+<div class="hover:border-main hover:border p-3 rounded-2xl hover:shadow-main cursor-pointer shadow-md">
+    <div>
+        <img [src]="brand.image" class="w-full" alt="brand">
+        <h5 class="text-main font-bold text-center pt-3">{{brand.name}}</h5>
+    </div>
+</div>
