--- a/src/app/features/cart/components/cart-list/cart-list.component.html
+++ b/src/app/features/cart/components/cart-list/cart-list.component.html
@@ -29,10 +29,10 @@
 
 </section>
 }@else {
-<div class="container">
+<div class="container mb-15">
     <div class="row">
         <div class="col-span-12 text-center">
-            <img src="/images/empty cart.png" class="mx-auto" alt="">
+            <img src="/images/empty cart.png" class="mx-auto" alt="man-beside-a-empty-cart">
             <h2 class="font-bold text-2xl  mb-2 ">Your cart is currently empty</h2>
             <p class="text-gray-700 mb-0">I think the below button is important. Hit this button and you will find a lot
                 of
