--- a/src/app/features/category/components/categories-list/categories-list.component.html
+++ b/src/app/features/category/components/categories-list/categories-list.component.html
@@ -1,9 +1,9 @@
 <section class="my-5">
-    <h2 class=" main-h2">Popular Brands</h2>    
+    <h2 class=" main-h2">Popular Categories</h2>
     <div class="container mx-auto">
-        <div class="grid sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-5 gap-5 max-w-screen-xl mx-auto">
-            @for (brand of allBrands; track brand._id) {
-            <app-brand-card [brand]="brand"/>
+        <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-5 max-w-screen-xl mx-auto">
+            @for (category of allCategories; track category._id) {
+            <app-categories-card [category]="category" />
             }@empty {
             <h2 class="text-main text-5xl col-span-12 text-center my-6 uppercase font-bold">Loading
                 <i class="fa-solid fa-spinner"></i>
