--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="bg-light border-gray-200 dark:bg-gray-900">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-5">
         <a routerLink="/home" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="images/freshcart-logo.svg" class="h-8" alt=" Cart Logo" />
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
@@ -54,7 +54,7 @@
                         class=" relative block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-300 md:hover:bg-transparent md:border-0 md:hover:text-main md:p-0 dark:text-white md:dark:hover:text-main dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
                         Cart <i class="fa fa-cart-shopping"></i>
                         <div
-                            class="absolute inline-flex items-center justify-center w-5 h-5 text-xs font-bold text-white bg-main border-2 border-light rounded-full -top-4 -end-4 dark:border-gray-900">
+                            class="cart-count absolute inline-flex items-center justify-center w-5 h-5 text-xs font-bold text-white bg-main border-2 border-light rounded-full -top-4 -end-4 dark:border-gray-900">
                             20</div>
                     </a>
                 </li>
