feat(wishlist): implement wishlist functionality with UI and navbar counter

--- a/src/app/features/home/components/category-slider/category-slider.component.html
+++ b/src/app/features/home/components/category-slider/category-slider.component.html
@@ -1,5 +1,5 @@
 <h2 class=" main-h2">Popular Categories</h2>
-<div class="container mx-auto">
+<div>
     <owl-carousel-o [options]="customOptions">
         @for (category of allCategories; track category._id) {
         <ng-template carouselSlide>
