--- a/src/app/features/cart/components/cart-item/cart-item.component.html
+++ b/src/app/features/cart/components/cart-item/cart-item.component.html
@@ -12,10 +12,10 @@
         </div>
         <div>
             <button (click)="onUpdateQty(product.count+1)"
-                class="border border-main px-3 py-2 rounded hover:bg-main hover:text-white cursor-pointer transition duration-300">+</button>
+                class="border-2 border-main px-3 py-2 rounded hover:bg-main hover:text-white cursor-pointer transition duration-300">+</button>
             <span class="mx-3">{{product.count}}</span>
             <button (click)="onUpdateQty(product.count-1)"
-                class="border border-main px-3 py-2 rounded hover:bg-main hover:text-white cursor-pointer transition duration-300">-</button>
+                class="border-2 border-main px-3 py-2 rounded hover:bg-main hover:text-white cursor-pointer transition duration-300">-</button>
         </div>
     </div>
 </div>
