--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,10 @@
     .main-h2 {
         @apply text-4xl font-bold uppercase text-center my-5 bg-main text-white py-4
     }
+
+    .main-anchor {
+        @apply translate-y-full top-0 right-0 absolute z-10 px-5 pt-7 cursor-pointer transition duration-700 group-hover:translate-y-0 group-hover:opacity-100 opacity-0 hover:text-red-500
+    }
 }
 
 /* :root {
