--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -71,7 +71,7 @@
                 </li>
                 <li>
                     <a (click)="logOut()"
-                        class=" cursor-pointer block py-2 px-3 md:p-0 rounded-sm md:hover:text-main dark:text-white md:dark:hover:text-main  dark:hover:bg-gray-700 md:dark:hover:bg-transparent "
+                        class=" cursor-pointer block py-2 px-3 md:p-0 rounded-sm md:hover:text-main hover:bg-gray-300  md:hover:bg-transparent dark:text-white md:dark:hover:text-main  dark:hover:bg-gray-700  md:dark:hover:bg-transparent "
                         aria-current="page">LogOut</a>
                 </li>
             </ul>
