--- a/src/app/features/cart/components/cart-item/cart-item.component.html
+++ b/src/app/features/cart/components/cart-item/cart-item.component.html
@@ -10,12 +10,23 @@
             <button (click)="onRemove()" class="cursor-pointer"> <i class="fa fa-trash-can text-main"></i>
                 Remove</button>
         </div>
-        <div>
+        <div class="flex items-center gap-2">
+            <button (click)="onUpdateQty(product.count+1)"
+                class="w-9 h-9 flex items-center justify-center border-2 border-main rounded hover:bg-main hover:text-white cursor-pointer transition duration-300">
+                +
+            </button>
+            <span class="text-lg font-bold w-6 text-center">{{ product.count }}</span>
+            <button (click)="onUpdateQty(product.count-1)"
+                class="w-9 h-9 flex items-center justify-center border-2 border-main rounded hover:bg-main hover:text-white cursor-pointer transition duration-300">
+                -
+            </button>
+        </div>
+        <!-- <div>
             <button (click)="onUpdateQty(product.count+1)"
                 class="border-2 border-main px-3 py-2 rounded hover:bg-main hover:text-white cursor-pointer transition duration-300">+</button>
             <span class="mx-3">{{product.count}}</span>
             <button (click)="onUpdateQty(product.count-1)"
                 class="border-2 border-main px-3 py-2 rounded hover:bg-main hover:text-white cursor-pointer transition duration-300">-</button>
-        </div>
+        </div> -->
     </div>
 </div>
