--- a/src/app/features/product/components/product-card/product-card.component.html
+++ b/src/app/features/product/components/product-card/product-card.component.html
@@ -10,7 +10,16 @@
     </div>
 
     <button (click)="onAddToCart()" class="main-btn">Add To Cart</button>
+
+    @if (!wishlist.includes(product.id)) {
     <a (click)="onToggleWishlist(product._id)">
-        <i class="main-anchor fa-solid fa-heart fa-lg"></i>
+        <i class="main-anchor fa-regular fa-heart fa-lg"></i>
     </a>
+    }
+    @if (wishlist.includes(product.id)) {
+    <a (click)="onRemoveFromWishList(product._id)">
+        <i class="main-anchor fa-solid fa-heart fa-lg text-red-500"></i>
+    </a>
+    }
+
 </div>
