--- a/src/styles.css
+++ b/src/styles.css
@@ -87,10 +87,10 @@ body {
 
 }
 
-/* .pagination-spreads ul>li.disabled {
+.pagination-spreads ul>li.disabled {
     border: 1px solid var(--color-main) !important;
     border-radius: 8px !important;
-} */
+}
 
 
 /* ----- Toaster Styles ----- */
