feat: Enhance UI with product list pagination, sliders, and design improvements
This commit includes multiple UI and functionality enhancements across the application:
- Implemented pagination for the product list using ngx-pagination. Pagination variables (page, limit, etc.) are defined in the component’s TypeScript file and bound in the template. Pagination controls are conditionally rendered using *ngIf to prevent them from showing on the home page.
- Created a reusable Brands Slider component and integrated it into the home page for better brand visibility.
- Added navigation arrows to the main and category sliders (Owl Carousel) for improved user control and slider navigation.
- Enhanced section headers in Wishlist, Categories, and Brands components to ensure consistent styling and better visual hierarchy.
- Added two new high-quality images to the project assets for improved visual appeal.
- Refined the home page overview section with updated content and layout for a more engaging and informative presentation.

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,15 +33,20 @@
     }
 }
 
-/* :root {
+:root {
     ::-webkit-scrollbar {
         width: 12px;
     }
 
     ::-webkit-scrollbar-thumb {
         background-color: var(--color-main);
+        border-radius: 20px;
     }
-} */
+
+    ::-webkit-scrollbar-track {
+        background-color: #364153;
+    }
+}
 
 body {
     font-family: var(--font-family) !important;
@@ -53,6 +58,7 @@ body {
     color: #0aad0a;
 }
 
+/* ----- Owl-Carusel Styles ----- */
 .owl-carousel .owl-dots .owl-dot span {
     background: #999 !important;
 }
@@ -62,6 +68,32 @@ body {
     background-color: var(--color-main) !important;
 }
 
+.owl-nav {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+
+.owl-theme .owl-nav [class*=owl-] {
+    color: #FFF;
+    height: 90px;
+    width: 30px;
+    font-size: 24px;
+    font-weight: bolder;
+    background: rgba(54, 54, 54, 0.5);
+    cursor: pointer;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.owl-theme .owl-nav [class*=owl-]:hover {
+    background-color: rgba(10, 173, 10, 0.2);
+}
 
 /* ----- Paginator Styles ----- */
 .ngx-pagination {
