--- a/src/app/features/brands/components/brand-list/brand-list.component.html
+++ b/src/app/features/brands/components/brand-list/brand-list.component.html
@@ -1,5 +1,5 @@
 <section class="my-5">
-    <h2 class=" main-h2">Popular Brands</h2>    
+    <h2 class=" main-h2">Brands you love. Quality you trust</h2>    
     <div class="container mx-auto">
         <div class="grid sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-5 gap-5 max-w-screen-xl mx-auto">
             @for (brand of allBrands; track brand._id) {
