--- a/src/app/features/category/components/categories-list/categories-list.component.html
+++ b/src/app/features/category/components/categories-list/categories-list.component.html
@@ -1,5 +1,5 @@
 <section class="my-5">
-    <h2 class=" main-h2">Popular Categories</h2>
+    <h2 class=" main-h2">Discover Categories</h2>
     <div class="container mx-auto">
         <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-5 max-w-screen-xl mx-auto">
             @for (category of allCategories; track category._id) {
