--- a/src/app/features/wishList/components/wish-list-list/wish-list-list.component.html
+++ b/src/app/features/wishList/components/wish-list-list/wish-list-list.component.html
@@ -1,7 +1,7 @@
 @if (!isLoading) {
 @if (products.length > 0) {
 <section class="my-5">
-    <h2 class="main-h2">WishList</h2>
+    <h2 class="main-h2">Your Favorites</h2>
     <div class="container mx-auto">
         <div class="grid sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-5 gap-5 max-w-screen-xl mx-auto">
             @for (product of products; track product._id) {
