feat: Improve aesthetics with updated slider icons, dark/light mode logo, and checkout button enhancements
- Added support for switching logos based on dark and light modes using Tailwind's dark utility classes
- Updated navigation icons in both main and categories sliders for improved UI consistency
- Refined checkout button styling for a more polished and cohesive user experience

--- a/src/app/features/cart/components/cart-list/cart-list.component.html
+++ b/src/app/features/cart/components/cart-list/cart-list.component.html
@@ -21,8 +21,8 @@
     <div class="flex justify-between">
         <button routerLink="/products" class="main-btn opacity-100 w-auto mb-13 ">Continue Shopping</button>
         <button [routerLink]="['/checkout',cartDetails.cartId]"
-            class="main-btn opacity-100 w-auto bg-black mb-13 hover:bg-black/70">Checkout
-            <span class="ms-2">{{cartDetails.data.totalCartPrice}}EGP</span>
+            class="main-btn opacity-100 w-auto bg-black mb-13 hover:bg-black/70">Checkout :
+            <span class="ms-2">{{cartDetails.data.totalCartPrice}} EGP</span>
         </button>
     </div>
 
