--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="bg-light border-gray-200 dark:bg-gray-900">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-5">
         <a routerLink="/home" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="images/freshcart-logo.svg" class="h-8" alt=" Cart Logo" />
+            <img src="images/DarkModeLogo.svg" class="h-8 hidden dark:block" alt=" Cart Logo" />
+            <img src="/images/freshcart-logo.svg" class="h-8 block dark:hidden" alt=" Cart Logo" />
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
         </a>
         <button data-collapse-toggle="navbar-default" type="button"
