feat(wishlist, product-card): enhance layout and UX with cart icon and improved button placement.

--- a/src/app/features/product/components/product-card/product-card.component.html
+++ b/src/app/features/product/components/product-card/product-card.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
 
-    <button (click)="onAddToCart()" class="main-btn">Add To Cart</button>
+    <button (click)="onAddToCart()" class="main-btn">Add To Cart <i class="fa-solid fa-cart-shopping"></i></button>
 
     @if (!wishlist.includes(product.id)) {
     <a (click)="onToggleWishlist(product._id)">
