--- a/src/app/features/wishList/components/wish-list-item/wish-list-item.component.html
+++ b/src/app/features/wishList/components/wish-list-item/wish-list-item.component.html
@@ -2,13 +2,13 @@
     <div [routerLink]="['/product-detalis', product._id]">
         <img [src]="product.imageCover" class="w-full" [alt]="product.title">
         <h5 class="text-main">{{product.category.name}}</h5>
-        <h4 class="font-bold line-clamp-3">{{product.title}}</h4>
-        <div class="flex justify-between my-5">
+        <h4 class="font-bold line-clamp-3 min-h-[72px]">{{product.title}}</h4>
+        <div class="flex justify-between my-5 min-h-[32px]">
             <span>{{product.price}} EGP</span>
             <span> <i class="fa-solid fa-star text-rating"></i> {{product.ratingsAverage}}</span>
         </div>
     </div>
 
-    <button (click)="onAddToCart()" class="main-btn">Add To Cart</button>
+    <button (click)="onAddToCart()" class="main-btn">Add To Cart <i class="fa-solid fa-cart-shopping"></i></button>
     <button (click)="onRemoveFromWishList(product._id)" class="main-btn bg-red-500 mt-2">Remove From WishList</button>
 </div>
