feat(footer): improve UX by adding pointer cursor to App Store and Google Play logos.

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -25,8 +25,8 @@
 
             <div class="flex items-center gap-2">
                 <h3 class="h-6 m-0">FreshCart Now Available On</h3>
-                <img src="/images/get-google-play.png" width="100px" alt="Google-Play Logo" />
-                <img src="/images/get-apple-store.png" width="100px" alt="Apple-Store Logo" />
+                <img src="/images/get-google-play.png" width="100px" alt="Google-Play Logo" class="cursor-pointer" />
+                <img src="/images/get-apple-store.png" width="100px" alt="Apple-Store Logo" class="cursor-pointer" />
             </div>
         </div>
     </div>
