--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="bg-light border-gray-200 dark:bg-gray-900">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-5">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
         <a routerLink="/home" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="images/DarkModeLogo.svg" class="h-8 hidden dark:block" alt=" Cart Logo" />
             <img src="/images/freshcart-logo.svg" class="h-8 block dark:hidden" alt=" Cart Logo" />
@@ -17,7 +17,7 @@
         <div class="hidden w-full md:flex grow md:w-auto justify-between mx-10" id="navbar-default">
             @if (layout=='auth') {
             <ul
-                class=" ms-auto font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-300 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                class=" ms-auto font-medium flex flex-col p-4 mt-4 border border-gray-300 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                 <li>
                     <a routerLink="/login" routerLinkActive="text-main"
                         class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-300 md:hover:bg-transparent md:border-0 md:hover:text-main md:p-0 dark:text-white md:dark:hover:text-main dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
@@ -30,7 +30,7 @@
             </ul>
             }@else {
             <ul
-                class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-200 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                class="font-medium flex flex-col p-4 mt-4 border border-gray-200 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                 <li>
                     <a routerLink="/home" routerLinkActive="text-main"
                         class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-300 md:hover:bg-transparent md:border-0 md:hover:text-main md:p-0 dark:text-white md:dark:hover:text-main dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Home</a>
@@ -49,7 +49,7 @@
                 </li>
             </ul>
             <ul
-                class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-200 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                class="font-medium flex flex-col p-4 mt-4 border border-gray-200 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
 
                 <li>
                     <a routerLink="/wishlist" routerLinkActive="text-main"
