--- a/src/app/features/cart/components/cart-list/cart-list.component.html
+++ b/src/app/features/cart/components/cart-list/cart-list.component.html
@@ -5,7 +5,7 @@
     <div class="flex justify-between">
         <div>
             <h2 class="text-3xl font-bold my-3">Shop Cart:</h2>
-            <p class="text-main font-bold my-1">Total Cart Price : {{cartDetails.data.totalCartPrice}} EGP</p>
+            <p class="text-main font-bold my-1">Total Cart Price : {{cartDetails.data.totalCartPrice | number:'1.0-2'}} EGP</p>
         </div>
         <div>
             <button (click)="clearCart()"
@@ -22,7 +22,7 @@
         <button routerLink="/products" class="main-btn opacity-100 w-auto mb-13 ">Continue Shopping</button>
         <button [routerLink]="['/checkout',cartDetails.cartId]"
             class="main-btn opacity-100 w-auto bg-black mb-13 hover:bg-black/70">Checkout :
-            <span class="ms-2">{{cartDetails.data.totalCartPrice}} EGP</span>
+            <span class="ms-2">{{cartDetails.data.totalCartPrice | number:'1.0-2'}} EGP</span>
         </button>
     </div>
 
