--- a/src/app/features/product/components/product-card/product-card.component.html
+++ b/src/app/features/product/components/product-card/product-card.component.html
@@ -4,7 +4,7 @@
         <h5 class="text-main">{{product.category.name}}</h5>
         <h4 class="font-bold line-clamp-1">{{product.title}}</h4>
         <div class="flex justify-between my-5">
-            <span>{{product.price}} EGP</span>
+            <span>{{product.price | number:'1.0-2'}} EGP</span>
             <span> <i class="fa-solid fa-star text-rating"></i> {{product.ratingsAverage}}</span>
         </div>
     </div>
