--- a/src/app/features/product/components/product-detalis/product-detalis.component.html
+++ b/src/app/features/product/components/product-detalis/product-detalis.component.html
@@ -37,7 +37,7 @@
                 <h2 class="text-main uppercase my-5 font-bold">Category : {{ productDetails.category.name }}</h2>
                 <p class="my-5">{{ productDetails.description }}</p>
                 <div class="flex justify-between mt-5">
-                    <span>{{ productDetails.price }} EGP</span>
+                    <span>{{ productDetails.price | number:'1.0-2'}} EGP</span>
                     <span><i class="fa-solid fa-star text-rating"></i> {{ productDetails.ratingsAverage }}</span>
                 </div>
                 <button (click)="addProductToCart(productDetails.id)" class="main-btn opacity-100">Add To Cart</button>
