--- a/src/app/features/wishList/components/wish-list-item/wish-list-item.component.html
+++ b/src/app/features/wishList/components/wish-list-item/wish-list-item.component.html
@@ -4,7 +4,7 @@
         <h5 class="text-main">{{product.category.name}}</h5>
         <h4 class="font-bold line-clamp-3 min-h-[72px]">{{product.title}}</h4>
         <div class="flex justify-between my-5 min-h-[32px]">
-            <span>{{product.price}} EGP</span>
+            <span>{{product.price | number:'1.0-2'}} EGP</span>
             <span> <i class="fa-solid fa-star text-rating"></i> {{product.ratingsAverage}}</span>
         </div>
     </div>
